# motion_latent_diffusion_standalone

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: README.md  app.py  cli.py  pyproject.toml  requirements.txt  visualize.py
demo/notebooks/: latent_analysis.ipynb
src/motion_latent_diffusion_standalone/: __init__.py  model.py  transforms.py
src/motion_latent_diffusion_standalone/models/: __init__.py  utils.py
src/motion_latent_diffusion_standalone/models/architectures/: __init__.py  denoiser.py  embeddings.py  motion_encoder.py  motion_vae.py  text_encoder.py
src/motion_latent_diffusion_standalone/models/operators/: __init__.py  cross_attention.py  position_encoding.py  positional_encoding.py
